--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,17 +1,25 @@
+---
 es:
-  decidim:
-    authorizations:
-      new:
-        authorize: Autorizar
-    authorization_handlers:
+  activemodel:
+    attributes:
       census_authorization_handler:
-        name: Padrón municipal
+        date_of_birth: Fecha de nacimiento
+        document_number: DNI
+        postal_code: Código postal
   census_authorization:
     errors:
       messages:
-        not_in_census: Esta persona no figura en el censo municipal o es menor de 16 años
+        not_in_census: Esta persona no figura en el censo municipal o es menor de
+          16 años
     form:
       date_select:
         day: Día
         month: Mes
         year: Año
+  decidim:
+    authorization_handlers:
+      census_authorization_handler:
+        name: Padrón municipal
+    authorizations:
+      new:
+        authorize: Autorizar
