Update footer texts

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -37,3 +37,4 @@ ca:
         follow_us: Segueix-nos a les xarxes
         participation_address: C/Sant Joan (antic hospital)
         reus_link_title: anar a reus.cat
+        what: Regidoria de Participació Ciutatania i Transparència
