--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -38,3 +38,4 @@ es:
         follow_us: Síguenos en las redes
         participation_address: C/Sant Joan (antiguo hospital)
         reus_link_title: ir a reus.cat
+        what: Regidoria de Participació Ciutatania i Transparència
