--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -4,8 +4,12 @@ ca:
     attributes:
       census_authorization_handler:
         date_of_birth: Data de naixement
-        document_number: Número del document d'identitat (DNI o NIE sense la lletra final)
+        document_number: Número del document d'identitat (DNI o NIE sense la lletra
+          final)
         postal_code: Codi postal
+      user:
+        official_name_custom: Nom oficial
+        telephone_number_custom: Telèfon personal
   census_authorization:
     errors:
       messages:
@@ -16,13 +20,32 @@ ca:
         day: Dia
         month: Mes
         year: Any
-      postal_code_help: Si vol consultar el codi postal que té o li dona algun error al validar-lo, consulti la següent web de Correos en %{link} en l'opció cerca de codi postal; així podrà consultar el seu codi postal de l'adreça on està empadronada.
+      postal_code_help: Si vol consultar el codi postal que té o li dona algun error
+        al validar-lo, consulti la següent web de Correos en %{link} en l'opció cerca
+        de codi postal; així podrà consultar el seu codi postal de l'adreça on està
+        empadronada.
   decidim:
     authorization_handlers:
       census_authorization_handler:
-        name: Padró municipal
         explanation: Verifica't amb el padró
+        name: Padró municipal
+    devise:
+      registrations:
+        new:
+          official_name_custom_help: Només serà visible pels administradors. Utilitzat
+            per a realitzar les comunicacions oficials.
+          telephone_number_custom_help: Només serà visible pels administradors. Utilitzat
+            per a realitzar les comunicacions oficials.
+    proposals:
+      admin:
+        proposals:
+          index:
+            contact: Contacte
     verifications:
+      authorizations:
+        first_login:
+          actions:
+            census_authorization_handler: Verificació amb el padró
       create:
         error: S'ha produït un error en crear l'autorització. És possible que no figuri
           en el cens o sigui menor de 16 anys.
