--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -4,8 +4,7 @@ ca:
     attributes:
       census_authorization_handler:
         date_of_birth: Data de naixement
-        document_number: Número del document d'identitat (DNI o NIE sense la lletra
-          final)
+        document_number: Número del document d'identitat (DNI o NIE sense la lletra final)
         postal_code: Codi postal
       user:
         official_name_custom: Nom oficial
@@ -13,17 +12,15 @@ ca:
   census_authorization:
     errors:
       messages:
-        not_in_census: Aquesta persona no figura en el cens municipal o és menor de
-          16 anys
+        not_in_census: Aquesta persona no figura en el cens municipal o és menor de 16 anys
     form:
       date_select:
         day: Dia
         month: Mes
         year: Any
-      postal_code_help: Si vol consultar el codi postal que té o li dona algun error
-        al validar-lo, consulti la següent web de Correos en %{link} en l'opció cerca
-        de codi postal; així podrà consultar el seu codi postal de l'adreça on està
-        empadronada.
+      postal_code_help: Si vol consultar el codi postal que té o li dona algun error al validar-lo, consulti la següent web de Correos en %{link} en l'opció cerca de codi postal; així podrà consultar el seu codi postal de l'adreça on està empadronada.
+  custom_errors:
+    telephone_format: Només dígits (i almenys 9)
   decidim:
     authorization_handlers:
       census_authorization_handler:
@@ -32,10 +29,8 @@ ca:
     devise:
       registrations:
         new:
-          official_name_custom_help: Només serà visible pels administradors. Utilitzat
-            per a realitzar les comunicacions oficials.
-          telephone_number_custom_help: Només serà visible pels administradors. Utilitzat
-            per a realitzar les comunicacions oficials.
+          official_name_custom_help: Només serà visible pels administradors. Utilitzat per a realitzar les comunicacions oficials.
+          telephone_number_custom_help: Només serà visible pels administradors. Utilitzat per a realitzar les comunicacions oficials.
     proposals:
       admin:
         proposals:
@@ -47,8 +42,7 @@ ca:
           actions:
             census_authorization_handler: Verificació amb el padró
       create:
-        error: S'ha produït un error en crear l'autorització. És possible que no figuri
-          en el cens o sigui menor de 16 anys.
+        error: S'ha produït un error en crear l'autorització. És possible que no figuri en el cens o sigui menor de 16 anys.
       new:
         authorize: Autoritzar
   layouts:
