--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -14,7 +14,10 @@ ca:
   census_authorization:
     errors:
       messages:
-        not_in_census: Aquesta persona no figura en el cens municipal o és menor de 16 anys
+        not_in_census: |
+          No hem pogut verificar a aquesta persona.
+          Posa't en contacte amb un administrador (info.participacio@reus.cat / 977.010.029)
+          indicant el teu nom i l'hora actual si vols que revisem el teu cas.
     form:
       date_select:
         day: Dia
@@ -61,8 +64,6 @@ ca:
         first_login:
           actions:
             census_authorization_handler: Verificació amb el padró
-      create:
-        error: S'ha produït un error en crear l'autorització. És possible que no figuri en el cens o sigui menor de 16 anys.
       new:
         authorize: Autoritzar
   layouts:
