--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -14,7 +14,10 @@ es:
   census_authorization:
     errors:
       messages:
-        not_in_census: Esta persona no figura en el censo municipal o es menor de 16 años
+        not_in_census: |
+          No hemos podido verificar a esta persona.
+          Ponte en contacto con un administrador (info.participacio@reus.cat / 977.010.029)
+          indicando tu nombre y la hora actual si quieres que revisemos tu caso.
     form:
       date_select:
         day: Día
@@ -61,8 +64,6 @@ es:
         first_login:
           actions:
             census_authorization_handler: Verificación con el padrón
-      create:
-        error: No ha sido posible verificar a esta persona. Es posible que no figure en el censo o sea menor de 16 años.
       new:
         authorize: Autorizar
   layouts:
