Fix reset password links

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -39,7 +39,7 @@ ca:
             "
           regular_user_html: "
             <p>Ja s'ha verificat un usuari amb aquest document d'identificació. Està associada al compte amb correu-e %{email}.</p>
-            <p>Tracta d'entrar com a usuari amb aquest compte. Si no recordes la contrasenya pots <a href='%{reset_password_link}'>recuperar-la</a> per seguir participant.</p>
+            <p>Tracta d'entrar com a usuari amb aquest compte. Si no recordes la contrasenya, <a href='%{logout_link}'>fes logout</a> i punxa a recuperar contrasenya a la pantalla d'iniciar sessió.</p>
             <p>Si encara tens problemes posa't en contacte amb un administrador via email (info.participacio@reus.cat) o telefònica (977.010.029).</p>
             "
     devise:
