--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -39,7 +39,7 @@ es:
             "
           regular_user_html: "
             <p>Ya se ha verificado un usuario con este documento de identificación. Esta asociada a la cuenta con correo-e %{email}.</p>
-            <p>Trata de hacer login con esa cuenta. Si no recuerdas la contraseña puedes <a href='%{reset_password_link}'>recuperarla</a> para seguir participando.</p>
+            <p>Trata de hacer login con esa cuenta. Si no recuerdas la contraseña, <a href='%{logout_link}'>haz logout</a> y pincha en recuperar contraseña en la pantalla de iniciar sesión.</p>
             <p>Si sigues teniendo problemas ponte en contacto con un administrador via email (info.participacio@reus.cat) o telefónica (977 010 029).</p>
             "
     devise:
